--- a/views/drop/index.haml
+++ b/views/drop/index.haml
@@ -15,6 +15,8 @@
             %li
               %a{:href => "#area3", :"data-toggle" => "tab"} 北方海域
             %li
+              %a{:href => "#area7", :"data-toggle" => "tab"} 南西海域
+            %li
               %a{:href => "#area4", :"data-toggle" => "tab"} 西方海域
             %li
               %a{:href => "#area5", :"data-toggle" => "tab"} 南方海域
@@ -38,128 +40,124 @@
                 %div.row
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/11"}
-                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBanner1-1.png"), :alt => "MapBanner1-1.png"}
+                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBannerHD1-1.png"), :alt => "MapBannerHD1-1.png"}
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/12"}
-                      %img.img-responsive.block-left{:src => kcwiki_get_file("MapBanner1-2.png"), :alt => "MapBanner1-2.png"}
+                      %img.img-responsive.block-left{:src => kcwiki_get_file("MapBannerHD1-2.png"), :alt => "MapBannerHD1-2.png"}
                 %div.row
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/13"}
-                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBanner1-3.png"), :alt => "MapBanner1-3.png"}
+                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBannerHD1-3.png"), :alt => "MapBannerHD1-3.png"}
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/14"}
-                      %img.img-responsive.block-left{:src => kcwiki_get_file("MapBanner1-4.png"), :alt => "MapBanner1-4.png"}
+                      %img.img-responsive.block-left{:src => kcwiki_get_file("MapBannerHD1-4.png"), :alt => "MapBannerHD1-4.png"}
                 %div.row
                   %a{:href => "/drop/map/15"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBanner1-5.png"), :alt => "MapBanner1-5.png"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHD1-5.png"), :alt => "MapBannerHD1-5.png"}
                 %div.row
                   %a{:href => "/drop/map/16"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBanner1-6.png"), :alt => "MapBanner1-6.png"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHD1-6.png"), :alt => "MapBannerHD1-6.png"}
             %div#area2.tab-pane
               %div.col-xs-12
                 %div.row
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/21"}
-                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBanner2-1.png"), :alt => "MapBanner2-1.png"}
+                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBannerHD2-1.png"), :alt => "MapBannerHD2-1.png"}
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/22"}
-                      %img.img-responsive.block-left{:src => kcwiki_get_file("MapBanner2-2.png"), :alt => "MapBanner2-2.png"}
+                      %img.img-responsive.block-left{:src => kcwiki_get_file("MapBannerHD2-2.png"), :alt => "MapBannerHD2-2.png"}
                 %div.row
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/23"}
-                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBanner2-3.png"), :alt => "MapBanner2-3.png"}
+                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBannerHD2-3.png"), :alt => "MapBannerHD2-3.png"}
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/24"}
-                      %img.img-responsive.block-left{:src => kcwiki_get_file("MapBanner2-4.png"), :alt => "MapBanner2-4.png"}
+                      %img.img-responsive.block-left{:src => kcwiki_get_file("MapBannerHD2-4.png"), :alt => "MapBannerHD2-4.png"}
                 %div.row
                   %a{:href => "/drop/map/25"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBanner2-5.png"), :alt => "MapBanner2-5.png"}
-                %div.row
-                  %img.img-responsive.block-center{:src => kcwiki_get_file("MapBanner0-5.png"), :alt => "MapBanner0-5.png"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHD2-5.png"), :alt => "MapBannerHD2-5.png"}
             %div#area3.tab-pane
               %div.col-xs-12
                 %div.row
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/31"}
-                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBanner3-1.png"), :alt => "MapBanner3-1.png"}
+                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBannerHD3-1.png"), :alt => "MapBannerHD3-1.png"}
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/32"}
-                      %img.img-responsive.block-left{:src => kcwiki_get_file("MapBanner3-2.png"), :alt => "MapBanner3-2.png"}
+                      %img.img-responsive.block-left{:src => kcwiki_get_file("MapBannerHD3-2.png"), :alt => "MapBannerHD3-2.png"}
                 %div.row
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/33"}
-                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBanner3-3.png"), :alt => "MapBanner3-3.png"}
+                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBannerHD3-3.png"), :alt => "MapBannerHD3-3.png"}
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/34"}
-                      %img.img-responsive.block-left{:src => kcwiki_get_file("MapBanner3-4.png"), :alt => "MapBanner3-4.png"}
+                      %img.img-responsive.block-left{:src => kcwiki_get_file("MapBannerHD3-4.png"), :alt => "MapBannerHD3-4.png"}
                 %div.row
                   %a{:href => "/drop/map/35"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBanner3-5.png"), :alt => "MapBanner3-5.png"}
-                %div.row
-                  %img.img-responsive.block-center{:src => kcwiki_get_file("MapBanner0-5.png"), :alt => "MapBanner0-5.png"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHD3-5.png"), :alt => "MapBannerHD3-5.png"}
             %div#area4.tab-pane
               %div.col-xs-12
                 %div.row
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/41"}
-                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBanner4-1.png"), :alt => "MapBanner4-1.png"}
+                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBannerHD4-1.png"), :alt => "MapBannerHD4-1.png"}
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/42"}
-                      %img.img-responsive.block-left{:src => kcwiki_get_file("MapBanner4-2.png"), :alt => "MapBanner4-2.png"}
+                      %img.img-responsive.block-left{:src => kcwiki_get_file("MapBannerHD4-2.png"), :alt => "MapBannerHD4-2.png"}
                 %div.row
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/43"}
-                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBanner4-3.png"), :alt => "MapBanner4-3.png"}
+                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBannerHD4-3.png"), :alt => "MapBannerHD4-3.png"}
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/44"}
-                      %img.img-responsive.block-left{:src => kcwiki_get_file("MapBanner4-4.png"), :alt => "MapBanner4-4.png"}
+                      %img.img-responsive.block-left{:src => kcwiki_get_file("MapBannerHD4-4.png"), :alt => "MapBannerHD4-4.png"}
                 %div.row
                   %a{:href => "/drop/map/45"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBanner4-5.png"), :alt => "MapBanner4-5.png"}
-                %div.row
-                  %img.img-responsive.block-center{:src => kcwiki_get_file("MapBanner0-5.png"), :alt => "MapBanner0-5.png"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHD4-5.png"), :alt => "MapBannerHD4-5.png"}
             %div#area5.tab-pane
               %div.col-xs-12
                 %div.row
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/51"}
-                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBanner5-1.png"), :alt => "MapBanner5-1.png"}
+                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBannerHD5-1.png"), :alt => "MapBannerHD5-1.png"}
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/52"}
-                      %img.img-responsive.block-left{:src => kcwiki_get_file("MapBanner5-2.png"), :alt => "MapBanner5-2.png"}
+                      %img.img-responsive.block-left{:src => kcwiki_get_file("MapBannerHD5-2.png"), :alt => "MapBannerHD5-2.png"}
                 %div.row
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/53"}
-                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBanner5-3.png"), :alt => "MapBanner5-3.png"}
+                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBannerHD5-3.png"), :alt => "MapBannerHD5-3.png"}
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/54"}
-                      %img.img-responsive.block-left{:src => kcwiki_get_file("MapBanner5-4.png"), :alt => "MapBanner5-4.png"}
+                      %img.img-responsive.block-left{:src => kcwiki_get_file("MapBannerHD5-4.png"), :alt => "MapBannerHD5-4.png"}
                 %div.row
                   %a{:href => "/drop/map/55"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBanner5-5.png"), :alt => "MapBanner5-5.png"}
-                %div.row
-                  %img.img-responsive.block-center{:src => kcwiki_get_file("MapBanner0-5.png"), :alt => "MapBanner0-5.png"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHD5-5.png"), :alt => "MapBannerHD5-5.png"}
             %div#area6.tab-pane
               %div.col-xs-12
                 %div.row
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/61"}
-                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBanner6-1.png"), :alt => "MapBanner6-1.png"}
+                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBannerHD6-1.png"), :alt => "MapBannerHD6-1.png"}
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/62"}
-                      %img.img-responsive.block-left{:src => kcwiki_get_file("MapBanner6-2.png"), :alt => "MapBanner6-2.png"}
+                      %img.img-responsive.block-left{:src => kcwiki_get_file("MapBannerHD6-2.png"), :alt => "MapBannerHD6-2.png"}
                 %div.row
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/63"}
-                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBanner6-3.png"), :alt => "MapBanner6-3.png"}
+                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBannerHD6-3.png"), :alt => "MapBannerHD6-3.png"}
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/64"}
-                      %img.img-responsive.block-left{:src => kcwiki_get_file("MapBanner6-4.png"), :alt => "MapBanner6-4.png"}
+                      %img.img-responsive.block-left{:src => kcwiki_get_file("MapBannerHD6-4.png"), :alt => "MapBannerHD6-4.png"}
                 %div.row
                   %a{:href => "/drop/map/65"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBanner6-5.png"), :alt => "MapBanner6-5.png"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHD6-5.png"), :alt => "MapBannerHD6-5.png"}
+            %div#area7.tab-pane
+              %div.col-xs-12
                 %div.row
-                  %img.img-responsive.block-center{:src => kcwiki_get_file("MapBanner0-5.png"), :alt => "MapBanner0-5.png"}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/71"}
+                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBannerHD7-1.png"), :alt => "MapBannerHD7-1.png"}
             %div#area36.tab-pane
               %div.col-xs-12
                 %div.row
