--- a/views/drop/index.haml
+++ b/views/drop/index.haml
@@ -158,6 +158,9 @@
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/71"}
                       %img.img-responsive.block-right{:src => kcwiki_get_file("MapBannerHD7-1.png"), :alt => "MapBannerHD7-1.png"}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/72"}
+                      %img.img-responsive.block-right{:src => kcwiki_get_file("MapBannerHD7-2.png"), :alt => "MapBannerHD7-2.png"}
             %div#area36.tab-pane
               %div.col-xs-12
                 %div.row
