--- a/views/drop/index.haml
+++ b/views/drop/index.haml
@@ -34,8 +34,10 @@
               %a{:href => "#area40", :"data-toggle" => "tab"} 捷号決戦！邀撃、レイテ沖海戦(前篇)
             %li
               %a{:href => "#area41", :"data-toggle" => "tab"} 捷号決戦！邀撃、レイテ沖海戦(後篇)
-            %li.active
+            %li
               %a{:href => "#area42", :"data-toggle" => "tab"} 抜錨！連合艦隊、西へ！
+            %li.active
+              %a{:href => "#area43", :"data-toggle" => "tab"} 邀撃！ブイン防衛作戦
           %div.tab-content.top15
             %div#area1.tab-pane
               %div.col-xs-12
@@ -268,7 +270,7 @@
                 %div.row
                   %a{:href => "/drop/map/417/"}
                     %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-7Winter2018.png"), :alt => "MapBannerE-7Winter2018.png"}
-            %div#area42.tab-pane.active
+            %div#area42.tab-pane
               %div.col-xs-12
                 %div.row
                   %a{:href => "/drop/map/421/"}
@@ -285,6 +287,17 @@
                 %div.row
                   %a{:href => "/drop/map/425/"}
                     %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHDE-5Summer2018.png"), :alt => "MapBannerHDE-5Summer2018.png"}
+            %div#area43.tab-pane.active
+              %div.col-xs-12
+                %div.row
+                  %a{:href => "/drop/map/431/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHDE-1Winter2019.png"), :alt => "MapBannerHDE-1Winter2019.png"}
+                %div.row
+                  %a{:href => "/drop/map/432/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHDE-2Winter2019.png"), :alt => "MapBannerHDE-2Winter2019.png"}
+                %div.row
+                  %a{:href => "/drop/map/433/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHDE-3Winter2019.png"), :alt => "MapBannerHDE-3Winter2019.png"}
   %div.col-xs-12.col-md-6
     %div.panel-group
       %div.panel.panel-primary
