--- a/views/layout.haml
+++ b/views/layout.haml
@@ -19,8 +19,8 @@
       %script{:src => "//cdn.bootcss.com/respond.js/1.4.2/respond.min.js"}
     / WEB PUSH
     %link{:rel => "manifest", :href => "/manifest.json"}
-    %link{:href => "//disqus.kcwiki.org/dist/iDisqus.min.css", :rel => "stylesheet"}
-    %script{:src => "//disqus.kcwiki.org/dist/iDisqus.min.js"}
+    %link{:href => "//static.kcwiki.org/iDisqus/2019/iDisqus.min.css", :rel => "stylesheet"}
+    %script{:src => "//static.kcwiki.org/iDisqus/2019/iDisqus.min.js"}
   %body
     =haml :navbar, :locals => locals
     =haml :ad
