--- a/views/drop/index.haml
+++ b/views/drop/index.haml
@@ -36,8 +36,10 @@
               %a{:href => "#area41", :"data-toggle" => "tab"} 捷号決戦！邀撃、レイテ沖海戦(後篇)
             %li
               %a{:href => "#area42", :"data-toggle" => "tab"} 抜錨！連合艦隊、西へ！
-            %li.active
+            %li
               %a{:href => "#area43", :"data-toggle" => "tab"} 邀撃！ブイン防衛作戦
+            %li.active
+              %a{:href => "#area44", :"data-toggle" => "tab"} 発動！友軍救援「第二次ハワイ作戦」
           %div.tab-content.top15
             %div#area1.tab-pane
               %div.col-xs-12
@@ -287,7 +289,7 @@
                 %div.row
                   %a{:href => "/drop/map/425/"}
                     %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHDE-5Summer2018.png"), :alt => "MapBannerHDE-5Summer2018.png"}
-            %div#area43.tab-pane.active
+            %div#area43.tab-pane
               %div.col-xs-12
                 %div.row
                   %a{:href => "/drop/map/431/"}
@@ -298,6 +300,23 @@
                 %div.row
                   %a{:href => "/drop/map/433/"}
                     %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHDE-3Winter2019.png"), :alt => "MapBannerHDE-3Winter2019.png"}
+            %div#area43.tab-pane.active
+              %div.col-xs-12
+                %div.row
+                  %a{:href => "/drop/map/441/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHDE-1Spring2019.png"), :alt => "MapBannerHDE-1Spring2019.png"}
+                %div.row
+                  %a{:href => "/drop/map/442/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHDE-2Spring2019.png"), :alt => "MapBannerHDE-2Spring2019.png"}
+                %div.row
+                  %a{:href => "/drop/map/443/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHDE-3Spring2019.png"), :alt => "MapBannerHDE-3Spring2019.png"}
+                %div.row
+                  %a{:href => "/drop/map/444/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHDE-4Spring2019.png"), :alt => "MapBannerHDE-4Spring2019.png"}
+                %div.row
+                  %a{:href => "/drop/map/445/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHDE-5Spring2019.png"), :alt => "MapBannerHDE-5Spring2019.png"}
   %div.col-xs-12.col-md-6
     %div.panel-group
       %div.panel.panel-primary
