--- a/views/drop/index.haml
+++ b/views/drop/index.haml
@@ -38,8 +38,12 @@
               %a{:href => "#area42", :"data-toggle" => "tab"} 抜錨！連合艦隊、西へ！
             %li
               %a{:href => "#area43", :"data-toggle" => "tab"} 邀撃！ブイン防衛作戦
-            %li.active
+            %li
               %a{:href => "#area44", :"data-toggle" => "tab"} 発動！友軍救援「第二次ハワイ作戦」
+            %li
+              %a{:href => "#area45", :"data-toggle" => "tab"} 欧州方面反撃作戦 発動！「シングル作戦」
+            %li.active
+              %a{:href => "#area46", :"data-toggle" => "tab"} 進撃！第二次作戦「南方作戦」
           %div.tab-content.top15
             %div#area1.tab-pane
               %div.col-xs-12
@@ -300,7 +304,7 @@
                 %div.row
                   %a{:href => "/drop/map/433/"}
                     %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHDE-3Winter2019.png"), :alt => "MapBannerHDE-3Winter2019.png"}
-            %div#area43.tab-pane.active
+            %div#area44.tab-pane
               %div.col-xs-12
                 %div.row
                   %a{:href => "/drop/map/441/"}
@@ -317,6 +321,31 @@
                 %div.row
                   %a{:href => "/drop/map/445/"}
                     %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHDE-5Spring2019.png"), :alt => "MapBannerHDE-5Spring2019.png"}
+            %div#area45.tab-pane
+              %div.col-xs-12
+                %div.row
+                  %a{:href => "/drop/map/451/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHDE-1Summer2019.png"), :alt => "MapBannerHDE-1Summer2019.png"}
+                %div.row
+                  %a{:href => "/drop/map/452/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHDE-2Summer2019.png"), :alt => "MapBannerHDE-2Summer2019.png"}
+                %div.row
+                  %a{:href => "/drop/map/453/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHDE-3Summer2019.png"), :alt => "MapBannerHDE-3Summer2019.png"}
+            %div#area46.tab-pane.active
+              %div.col-xs-12
+                %div.row
+                  %a{:href => "/drop/map/461/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHDE-1Autumn2019.png"), :alt => "MapBannerHDE-1Autumn2019.png"}
+                %div.row
+                  %a{:href => "/drop/map/462/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHDE-2Autumn2019.png"), :alt => "MapBannerHDE-2Autumn2019.png"}
+                %div.row
+                  %a{:href => "/drop/map/463/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHDE-3Autumn2019.png"), :alt => "MapBannerHDE-3Autumn2019.png"}
+                %div.row
+                  %a{:href => "/drop/map/464/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHDE-4Autumn2019.png"), :alt => "MapBannerHDE-4Autumn2019.png"}
   %div.col-xs-12.col-md-6
     %div.panel-group
       %div.panel.panel-primary
