--- a/views/navbar.haml
+++ b/views/navbar.haml
@@ -19,7 +19,7 @@
         %li{:class => locals[:location] == "drop" ? "active" : nil}
           %a{:href => "/drop/"} 掉落统计
         %li{:class => ["dropdown", locals[:location] == "event" ? "active" : nil]}
-          %a{:href => "/event-6th-anniv/"} 活动限定统计(6周年期间限定)
+          %a{:href => "/event-sanma2019/"} 活动限定统计(2019年秋刀鱼活动)
           %ul.dropdown-menu
             %li
               %a{:href => "/event-sanma2018/"} 2018年秋刀鱼祭典
