--- a/views/drop/index.haml
+++ b/views/drop/index.haml
@@ -346,6 +346,12 @@
                 %div.row
                   %a{:href => "/drop/map/464/"}
                     %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHDE-4Autumn2019.png"), :alt => "MapBannerHDE-4Autumn2019.png"}
+                %div.row
+                  %a{:href => "/drop/map/465/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHDE-5Autumn2019.png"), :alt => "MapBannerHDE-5Autumn2019.png"}
+                %div.row
+                  %a{:href => "/drop/map/466/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerHDE-6Autumn2019.png"), :alt => "MapBannerHDE-6Autumn2019.png"}
   %div.col-xs-12.col-md-6
     %div.panel-group
       %div.panel.panel-primary
